src/objects/BMCServiceDesk__SYSTabFieldsInfo__c.object
<CustomObject>
    <description>This object allows you to store data for the fields in a tab.</description>
    <fields>
        <fullName>BMCServiceDesk__SYSTabInfo__c</fullName>
        <label>FKTabInfo</label>
        <referenceTo>BMCServiceDesk__SYSTabInfo__c</referenceTo>
        <relationshipName>SYSTabFieldsInfos</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Sequence__c</fullName>
        <externalId>true</externalId>
        <label>Sequence Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__columnSequence__c</fullName>
        <label>Column Sequence</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__columnWidth__c</fullName>
        <label>Column Width</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__fieldAPIName__c</fullName>
        <description>For querying data</description>
        <label>Field API Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Tab Fields Info</label>
    <listViews>
        <fullName>BMCServiceDesk__All</fullName>
        <columns>BMCServiceDesk__fieldAPIName__c</columns>
        <columns>BMCServiceDesk__SYSTabInfo__c</columns>
        <columns>BMCServiceDesk__columnSequence__c</columns>
        <columns>BMCServiceDesk__columnWidth__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>BMCServiceDesk__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SYSTabFieldsInfos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>